testsuite/tests/safeHaskell/flags/SafeFlags28.stderr

SafeFlags28.hs:1:17: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: -trust

SafeFlags28.hs:1:24: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: base,

SafeFlags28.hs:1:30: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: -trust

SafeFlags28.hs:1:37: error: [GHC-04924]
    Unknown flag in  {-# OPTIONS_GHC #-} pragma: bytestring
